Use Java 9 factory methods to create empty collections